--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+altgraph==0.17.4
+macholib==1.16.3
+modulegraph==0.19.6
+py2app==0.28.6
 pyobjc-core==10.0
 pyobjc-framework-Cocoa==10.0
 rumps==0.4.0
