--- a/app.properties
+++ b/app.properties
@@ -1,3 +1,2 @@
 [JMETER]
-HOME=/Users/naveenkumar/Tools/apache-jmeter-5.6.2
-PLIST=/Users/naveenkumar/Library/Preferences/org.apache.jmeter.plist
+home = /Users/naveenkumar/Tools/apache-jmeter-5.6.2
