--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ dmypy.json
 cython_debug/
 
 .DS_Store
+.vscode/
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
