--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,9 +25,31 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Generate app using py2app
       run: |
-        python setup.py py2app
+        python setup.py py2app --arch arm64
     - name: Upload dist folder
       uses: actions/upload-artifact@v2
       with:
         name: dist
-        path: dist
+    # - name: Create Release
+    #   id: create_release
+    #   uses: actions/create-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     tag_name: ${{ github.ref }}
+    #     release_name: Release ${{ github.ref }}
+    #     body: |
+    #       Release ${{ github.ref }}
+    #     draft: false
+    #     prerelease: false
+    # - name: Upload Release Asset
+    #   id: upload-release-asset
+    #   uses: actions/upload-release-asset@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     upload_url: ${{ steps.create_release.outputs.upload_url }}
+    #     asset_path: dist/
+    #     asset_name: dist
+    #     asset_content_type: application/zip
+    #     path: dist
