--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,6 +30,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: dist
+        path: dist
     # - name: Create Release
     #   id: create_release
     #   uses: actions/create-release@v1
