--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,24 +14,33 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    
+    - name: Set up Python 3.9
       uses: actions/setup-python@v3
       with:
         python-version: "3.9"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install py2app
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
     - name: Generate app using py2app
       run: |
         python setup.py py2app
+
+    - name: List current directory
+      run: |
+        ls -la
+
     - name: Upload app
       uses: actions/upload-artifact@v2
       with:
         name: dist
         path: dist
-    # - name: Create Release
+    
+        # - name: Create Release
     #   id: create_release
     #   uses: actions/create-release@v1
     #   env:
