--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -20,6 +20,11 @@ jobs:
       with:
         python-version: "3.9"
 
+    - name: List current directory
+      run: |
+        ls -la
+        uname -a
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -33,6 +38,7 @@ jobs:
     - name: List current directory
       run: |
         ls -la
+        uname -a
 
     - name: Upload app
       uses: actions/upload-artifact@v2
@@ -40,7 +46,7 @@ jobs:
         name: dist
         path: dist
     
-        # - name: Create Release
+    # - name: Create Release
     #   id: create_release
     #   uses: actions/create-release@v1
     #   env:
