--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest-xlarge
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v3
@@ -33,13 +33,13 @@ jobs:
 
     - name: Generate app for x86_64 architecture
       run: |
-        python setup.py py2app --arch x86_64
+        python setup.py py2app
         mv dist dist-x86_64
 
-    - name: Generate app for arm64 architecture
-      run: |
-        python setup.py py2app --arch arm64
-        mv dist dist-arm64
+    # - name: Generate app for arm64 architecture
+    #   run: |
+    #     python setup.py py2app --arch arm64
+    #     mv dist dist-arm64
 
     - name: Upload x86_64 app
       uses: actions/upload-artifact@v2
@@ -47,16 +47,12 @@ jobs:
         name: dist-x86_64
         path: dist-x86_64
 
-    - name: Upload arm64 app
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist-arm64
-        path: dist-arm64
+    # - name: Upload arm64 app
+    #   uses: actions/upload-artifact@v2
+    #   with:
+    #     name: dist-arm64
+    #     path: dist-arm64
     
-    - name: List current directory
-      run: |
-        ls -la
-        uname -a
     
     # - name: Create Release
     #   id: create_release
