Add: GitHub Action
Signed-off-by: NaveenKumar Namachivayam <catch.nkn@gmail.com>

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: macos-latest
+    runs-on: self-hosted
 
     steps:
     - uses: actions/checkout@v3
@@ -31,27 +31,27 @@ jobs:
         pip install py2app
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-    - name: Generate app for x86_64 architecture
-      run: |
-        arch -x86_64 python setup.py py2app --arch x86_64
-        mv dist dist-x86_64
-
-    # - name: Generate app for arm64 architecture
+    # - name: Generate app for x86_64 architecture
     #   run: |
-    #     arch -arm64 python setup.py py2app --arch arm64
-    #     mv dist dist-arm64
+    #     arch -x86_64 python setup.py py2app --arch x86_64
+    #     mv dist dist-x86_64
 
-    - name: Upload x86_64 app
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist-x86_64
-        path: dist-x86_64
+    - name: Generate app for arm64 architecture
+      run: |
+        arch -arm64 python setup.py py2app --arch arm64
+        mv dist dist-arm64
 
-    # - name: Upload arm64 app
+    # - name: Upload x86_64 app
     #   uses: actions/upload-artifact@v2
     #   with:
-    #     name: dist-arm64
-    #     path: dist-arm64
+    #     name: dist-x86_64
+    #     path: dist-x86_64
+
+    - name: Upload arm64 app
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist-arm64
+        path: dist-arm64
     
     
     # - name: Create Release
