--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -57,6 +57,7 @@ jobs:
       run: |
         chmod +x dist-arm64/Hamster.app/Contents/MacOS/Hamster
         chmod +x dist-arm64/Hamster.app/Contents/MacOS/python
+        ls -la dist-arm64/Hamster.app/Contents/MacOS/
 
     - name: Upload arm64 app
       uses: actions/upload-artifact@v2
