--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -69,28 +69,4 @@ jobs:
       with:
         name: dist-arm64.tar.gz
         path: dist-arm64
-    
-    
-    # - name: Create Release
-    #   id: create_release
-    #   uses: actions/create-release@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     tag_name: ${{ github.ref }}
-    #     release_name: Release ${{ github.ref }}
-    #     body: |
-    #       Release ${{ github.ref }}
-    #     draft: false
-    #     prerelease: false
-    # - name: Upload Release Asset
-    #   id: upload-release-asset
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-    #     asset_path: dist/
-    #     asset_name: dist
-    #     asset_content_type: application/zip
-    #     path: dist
+        preserve-permissions: true
