--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         python setup.py py2app
         mv dist dist-arm64
-      if: runner.os == 'self-hosted' && runner.architecture == 'arm64
+      if: runner.os == 'self-hosted' && runner.architecture == 'arm64'
 
     - name: Convert dist-arm64 to DMG
       run: |
