--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,7 +11,11 @@ jobs:
   build:
 
     # run on self-hosted runner and macos-latest for arm64 architecture and intel architecture
-    runs-on: [self-hosted, macos]
+    runs-on: ${{ matrix.os }}
+
+    strategy:
+      matrix:
+        os: [ self-hosted, macos ]
 
     steps:
     - uses: actions/checkout@v3
@@ -33,15 +37,15 @@ jobs:
           mv dist dist-intel
       if: runner.os == 'macos'
 
-    - name: Convert dist-intel to DMG
-      run: |
-        hdiutil create -volname "Hamster" -srcfolder dist-intel -ov -format UDZO dist-intel/Hamster-intel.dmg
-
     - name: Generate app for arm64 architecture
       run: |
         python setup.py py2app
         mv dist dist-arm64
       if: runner.os == 'self-hosted'
+
+    - name: Convert dist-intel to DMG
+      run: |
+        hdiutil create -volname "Hamster" -srcfolder dist-intel -ov -format UDZO dist-intel/Hamster-intel.dmg
 
     - name: Convert dist-arm64 to DMG
       run: |
