--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -56,14 +56,14 @@ jobs:
     - name: Upload intel app
       uses: actions/upload-artifact@v2
       with:
-        name: Hamster
+        name: Hamster-macos-intel-x86_64
         path: dist-intel/Hamster-intel.dmg
       if: runner.os == 'macos'
 
     - name: Upload arm64 app
       uses: actions/upload-artifact@v2
       with:
-        name: Hamster
+        name: Hamster-macos-apple-arm64
         path: dist-arm64/Hamster-darwin.dmg
       if: runner.os == 'self-hosted'
 
