--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -71,9 +71,7 @@ jobs:
 
     - name: Release Darwin
       uses: softprops/action-gh-release@v1
-      if:
-        startsWith(github.ref, 'refs/tags/')
-        matrix.os == 'self-hosted' && matrix.arch == 'ARM64'
+      if: startsWith(github.ref, 'refs/tags/') && matrix.os == 'self-hosted' && matrix.arch == 'ARM64'
       with:
         token: ${{ secrets.HAMSTER_APP_RELEASE_SECRET }}
         files: |
@@ -82,8 +80,8 @@ jobs:
     - name: Release Intel
       uses: softprops/action-gh-release@v1
       if:
-        startsWith(github.ref, 'refs/tags/')
-        matrix.os == 'macos' && matrix.arch == 'X64'
+        startsWith(github.ref, 'refs/tags/') && matrix.os == 'macos' && matrix.arch == 'X64'
+
       with:
         token: ${{ secrets.HAMSTER_APP_RELEASE_SECRET }}
         files: |
