Add: GitHub Action
Signed-off-by: NaveenKumar Namachivayam <catch.nkn@gmail.com>

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -76,7 +76,7 @@ jobs:
         git tag v${{ github.run_number }}
         git push origin v${{ github.run_number }}
       env:
-        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.HAMSTER_APP_RELEASE_SECRET }}
 
     - name: Release Darwin
       uses: softprops/action-gh-release@v1
