--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -87,7 +87,7 @@ jobs:
         tag_name: ${{ env.RELEASE_TAG }}
         generate_release_notes: true
         files: |
-          dist-arm64/Hamster-darwin.dmg
+          dist-arm64/${{ env.ARM64_DMG }}
 
     - name: Release Intel
       uses: softprops/action-gh-release@v1
@@ -98,4 +98,4 @@ jobs:
         generate_release_notes: true
         tag_name: ${{ env.RELEASE_TAG }}
         files: |
-          dist-intel/Hamster-intel.dmg
+          dist-intel/${{ env.INTEL_DMG }}
