Add: GH Workflow for Windows
Signed-off-by: NaveenKumar Namachivayam ⚡ <catch.nkn@gmail.com>

--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -20,8 +20,10 @@ jobs:
 
     strategy:
       matrix:
-        os: [ self-hosted, macos, windows ]
-        arch: [ 'X64', 'ARM64', 'X86' ]
+        os: [ windows-latest ]
+        arch: [ 'X86' ]
+#        os: [ self-hosted, macos, windows ]
+#        arch: [ 'X64', 'ARM64', 'X86' ]
 
     steps:
     - uses: actions/checkout@v3
