--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -26,17 +26,34 @@ jobs:
 #        arch: [ 'X64', 'ARM64', 'X86' ]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout feature/windows branch
+      uses: actions/checkout@v3
+      with:
+          ref: feature/windows
+
     - name: Set up Python 3.10.11
       uses: actions/setup-python@v3
       with:
         python-version: "3.10.11"
 
-    - name: Install dependencies
+#    - uses: actions/checkout@v3
+#    - name: Set up Python 3.10.11
+#      uses: actions/setup-python@v3
+#      with:
+#        python-version: "3.10.11"
+
+    - name: Install dependencies in Windows
       run: |
-        python -m pip install --upgrade pip
-        pip install py2app
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          python -m pip install --upgrade pip
+          pip install windows\requirements.txt
+      if: matrix.os == 'windows' && matrix.arch == 'X86'
+
+
+#    - name: Install dependencies
+#      run: |
+#        python -m pip install --upgrade pip
+#        pip install py2app
+#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
     - name: Generate app for intel architecture
       run: |
