Add: GH Workflow for Windows
Signed-off-by: NaveenKumar Namachivayam ⚡ <catch.nkn@gmail.com>

--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -29,12 +29,17 @@ jobs:
     - name: Checkout feature/windows branch
       uses: actions/checkout@v3
       with:
-          ref: feature/windows
+        ref: feature/windows
 
     - name: Set up Python 3.10.11
       uses: actions/setup-python@v3
       with:
         python-version: "3.10.11"
+
+    - name: Test Python version
+      run: |
+        python --version
+        python -m pip --version
 
 #    - uses: actions/checkout@v3
 #    - name: Set up Python 3.10.11
@@ -44,8 +49,8 @@ jobs:
 
     - name: Install dependencies in Windows
       run: |
-          python -m pip install --upgrade pip
-          pip install windows\requirements.txt
+        python -m pip install --upgrade pip
+        pip install windows\requirements.txt
       if: matrix.os == 'windows' && matrix.arch == 'X86'
 
 
