--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -40,6 +40,7 @@ jobs:
       run: |
         python --version
         python -m pip --version
+        dir
 
 #    - uses: actions/checkout@v3
 #    - name: Set up Python 3.10.11
@@ -50,7 +51,7 @@ jobs:
     - name: Install dependencies in Windows
       run: |
         python -m pip install --upgrade pip
-        pip install windows\requirements.txt
+        pip install .\windows\requirements.txt
 
 
 #    - name: Install dependencies
