--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         python --version
         python -m pip --version
-        dir
+        dir .\windows\
 
 #    - uses: actions/checkout@v3
 #    - name: Set up Python 3.10.11
