--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Install dependencies in Windows
       run: |
         python -m pip install --upgrade pip
-        pip install .\windows\requirements.txt
+        pip install -r .\windows\requirements.txt
 
 
 #    - name: Install dependencies
