Add: GH Workflow for Windows
Signed-off-by: NaveenKumar Namachivayam ⚡ <catch.nkn@gmail.com>

--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -74,8 +74,8 @@ jobs:
 
     - name: Generate app for windows
       run: |
-          python windows\setup.py bdist_msi
-          mv dist dist-windows
+        python .\windows\setup.py bdist_msi
+        mv dist dist-windows
 
     - name: Convert dist-intel to DMG
       run: |
