--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -41,6 +41,7 @@ jobs:
         python --version
         python -m pip --version
         dir .\windows\
+        
 
 #    - uses: actions/checkout@v3
 #    - name: Set up Python 3.10.11
@@ -52,7 +53,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r .\windows\requirements.txt
-
 
 #    - name: Install dependencies
 #      run: |
@@ -74,7 +74,8 @@ jobs:
 
     - name: Generate app for windows
       run: |
-        python .\windows\setup.py bdist_msi
+        cd windows
+        python setup.py bdist_msi
         mv dist dist-windows
 
     - name: Convert dist-intel to DMG
