--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -36,13 +36,6 @@ jobs:
       with:
         python-version: "3.10.11"
 
-    - name: Test Python version
-      run: |
-        python --version
-        python -m pip --version
-        dir .\windows\
-        
-
 #    - uses: actions/checkout@v3
 #    - name: Set up Python 3.10.11
 #      uses: actions/setup-python@v3
@@ -54,11 +47,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r .\windows\requirements.txt
 
-#    - name: Install dependencies
-#      run: |
-#        python -m pip install --upgrade pip
-#        pip install py2app
-#        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install py2app
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      if: matrix.os == 'macos' || matrix.os == 'self-hosted'
 
     - name: Generate app for intel architecture
       run: |
