--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -66,7 +66,7 @@ jobs:
       run: |
         python .\windows\setup.py bdist_msi
         mv dist dist-windows
-      if: matrix.os == 'windows'
+      if: matrix.os == 'windows-latest'
 
     - name: Convert dist-intel to DMG
       run: |
@@ -97,7 +97,7 @@ jobs:
       with:
           name: Hamster-windows-x86_64
           path: dist-windows/Hamster-*.msi
-      if: matrix.os == 'windows'
+      if: matrix.os == 'windows-latest'
 
     - name: GitHub Tag
       uses: mathieudutour/github-tag-action@v6.1
@@ -129,7 +129,7 @@ jobs:
 
     - name: Release Windows
       uses: softprops/action-gh-release@v1
-      if: github.ref == 'refs/heads/main' && matrix.os == 'windows'
+      if: github.ref == 'refs/heads/main' && matrix.os == 'windows-latest'
       with:
         token: ${{ secrets.HAMSTER_APP_RELEASE_SECRET }}
         body: 'Release for commit ${{ github.sha }}'
