--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -41,7 +41,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r .\windows\requirements.txt
-      if: matrix.os == 'windows'
+      if: matrix.os == 'windows-latest'
 
     - name: Install dependencies
       run: |
