--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -1,5 +1,5 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python.
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+# This workflow will install Python dependencies, create Hamster dist for Windows, macOS (Intel and Apple).
+# It will also create a GitHub release and upload the artifacts to it.
 
 name: Hamster
 
