--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     env:
-      RELEASE_TAG: v0.0.${{ github.run_number }}
+      RELEASE_TAG: v0.0.${{ github.run_number }}-${{ matrix.os }}-${{ matrix.arch }}
       INTEL_DMG: Hamster-x86-64-intel.dmg
       ARM64_DMG: Hamster-arm64-silicon.dmg
 
