--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     env:
-      RELEASE_TAG: v0.0.${{ github.run_number }}-${{ matrix.os }}-${{ matrix.arch }}
+      RELEASE_TAG: v0.0.${{ github.run_number }}
       INTEL_DMG: Hamster-x86-64-intel.dmg
       ARM64_DMG: Hamster-arm64-silicon.dmg
 
@@ -102,7 +102,7 @@ jobs:
     - name: GitHub Tag
       uses: mathieudutour/github-tag-action@v6.1
       with:
-        tag: ${{ env.RELEASE_TAG }}
+        custom_tag: ${{ env.RELEASE_TAG }}
         github_token: ${{ secrets.HAMSTER_APP_RELEASE_SECRET }}
 
     - name: Release Darwin
