--- a/.github/workflows/release-workflow.yml
+++ b/.github/workflows/release-workflow.yml
@@ -5,7 +5,7 @@ name: Hamster
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "feature/telemetry" ]
     paths-ignore:
       - '**/**.md'
 
@@ -14,9 +14,10 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     env:
-      RELEASE_TAG: 0.1.0
+      RELEASE_TAG: 0.2.0
       INTEL_DMG: Hamster-x86-64-intel.dmg
       ARM64_DMG: Hamster-arm64-silicon.dmg
+      MIXPANEL_TOKEN: ${{ secrets.MIXPANEL_TOKEN }}
 
     strategy:
       matrix:
